<resources>
    <string name="app_name">TaxiService</string>
    <string name="default_notification_channel_id">default</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="enter_account">Вход в аккаунт</string>
    <string name="registration_verification">Подтверждение регистрации</string>
    <string name="registration_verification_text">На Ваш номер телефона был отправлен код подтверждения регистрации</string>
    <string name="login">Логин</string>
    <string name="phone_number">Номер мобильного</string>
    <string name="sms_confirmation_code">SMS-Код подтверждения</string>
    <string name="phone_number_colon">Номер мобильного:</string>
    <string name="password">Пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="password_colon">Пароль:</string>
    <string name="password_confirm">Подтверждение пароля</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="fio">ФИО</string>
    <string name="fio_colon">ФИО:</string>
    <string name="email">Email</string>
    <string name="sign_in">Авторизация</string>
    <string name="sign_up">Регистрация</string>
    <string name="confirm">Подтвердить</string>
    <string name="proceed">Продолжить</string>
    <string name="send_again">Отправить ещё раз</string>
    <string name="register">Зарегистрироваться</string>
    <string name="error_password_wrong">Пароль неверный</string>
    <string name="error_password_confirm">Пароли не совпадают</string>
    <string name="error_confirmation_code">Код неверный</string>
    <string name="error_internet">Ошибка, проверьте подключение к интернету</string>
    <string name="error_unknown">Ошибка, попробуйте ещё раз</string>
    <string name="error_unknown_short">Неизвестная ошибка</string>
    <string name="or_entire_within">или войти с помощью:</string>
    <string name="i_on_social_networks">Я в социальных сетях:</string>
    <string name="field_error_cannot_be_empty">Поле не может быть пустым</string>
    <string name="field_error_length">Не может быть меньше %d символов</string>
    <string name="confirmation_code_sent_successful">Код подтверждения успешно отправлен</string>
    <string name="delete">Удалить</string>
    <string name="add_new">Добавить новую</string>
    <string name="save">Сохранить</string>
    <string name="create_order">Создать заказ</string>
    <string name="find_companion">Найти попутчика</string>
    <string name="solo_ride">Одиночная поездка</string>
    <string name="current_ride">Текущая поездка</string>
    <string name="rides_history">История поездок</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти</string>
    <string name="saved">Сохранено</string>
    <string name="loading">Загрузка</string>
    <string name="home">Главная</string>
    <string name="show">Показать</string>
    <string name="hide">Скрыть</string>
    <string name="where_you_want_arrive_to">Куда вам нужно добраться?</string>
    <string name="example">Пример</string>
    <string name="example_address">ул. Центральная 14, подъезд №5</string>
    <string name="select_image">Выбрать изображение</string>
    <string name="photo">Фотография</string>
    <string name="from_gallery">Из галереи</string>
    <string name="take_a_shot_camera">Сделать снимок</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="delete_confirmation_photo">Вы точно хотите удалить фотографию?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="street_name">Название улицы</string>
    <string name="clear">Очистить</string>
    <string name="house_number">Номер дома</string>
    <string name="entrance">Подъезд</string>
    <string name="check">Check</string>
    <string name="symbol_hryvna">₴</string>
    <string name="make_order">Заказать</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="add_route_point">Добавить точку маршрута</string>
    <string name="to">Куда</string>
    <string name="from">Откуда</string>
    <string name="car_searching">Поиск машины</string>
    <string name="car_founded">Машина найдена</string>
    <string name="number_of_people">Количество человек</string>
    <string name="search_companion">Поиск попутчика</string>
    <string name="info_about_person">Кликните по фигурке пользователя для просмотра информации о нем.</string>
    <string name="info_about_screen">На карте вы видите свое положение и локацию тех, чья посадка и высадка в пределах 5 км от ваших.</string>
    <string name="info_about_locations">Новые пользователи появляются на карте автоматически.</string>
    <string name="show_travel">Показать поездку</string>
    <string name="travel_info">Информация про поездку</string>
    <string name="chat">Чат</string>
    <string name="open_chat">Открыть Чат</string>
    <string name="message">Сообщение</string>
    <string name="show_feedback">Смотреть отзывы</string>
    <string name="invite_ride">Присоединится к поездке</string>
    <string name="man">Мужской</string>
    <string name="woman">Женский</string>
    <string name="users_feedbacks">Оценки пользователей:</string>
    <string name="negative">отрицательных</string>
    <string name="positive">положительных</string>
    <string name="show_companion">Смотреть поездку</string>
    <string name="ride_time">Время в пути:</string>
    <string name="price">Цена:</string>
    <string name="route">Маршрут:</string>
    <string name="followers">Участники:</string>

    <string name="message.car.type.hatchback">Хэтчбэк</string>
    <string name="message.car.type.sedan">Седан</string>
    <string name="message.car.type.universal">Универсал</string>
    <string name="message.car.type.minivan">Минивэн</string>
    <string name="message.car.type.minibus">Микроавтобус</string>
    <string name="message.car.type.premium">Премиум</string>
    
    <string name="view.text.feed_of_car">Подача автомобиля</string>
    <string name="view.text.type_of_car">Тип автомобиля</string>
    <string name="view.text.type_of_pay">Способ оплаты</string>
    <string name="view.text.order_car">Заказать авто</string>
    <string name="view.text.now">Сейчас</string>
    <string name="view.text.select_date">Указать дату и время</string>
    <string name="view.text.cache">Наличные</string>
    <string name="view.text.credit_card">Безнал</string>
    <string name="view.text.save">Сохранить</string>

    <!-- Texts of views -->
    <string name="view_text_grade_of_driver">На сколько вы довольны водителем?</string>
    <string name="view_text_feedback">Оставьте отзыв по критериям:</string>
    <string name="view_text_trip_completion">Завершить поездку</string>
    <string name="view_text_from_to">Откуда/Куда</string>
    <string name="view_text_add_point_of_trip"><u>ДОБАВИТЬ ТОЧКУ МАРШРУТА</u></string>
    <string name="view_text_add_or_delete"><u>Добавить/Удалить</u></string>
    <string name="view_text_change"><u>Изменить</u></string>
    <string name="view_text_to">Куда</string>
    <string name="view_text_from">Откуда</string>
    <string name="view_text_order_information">Информация о заказе</string>
    <string name="view_text_make_order">Заказать авто</string>
    <string name="view_text_input_name">Введите свое имя…</string>
    <string name="view_text_input_phone">Введите телефон…</string>
    <string name="view_text_add_service">Добавить услуги…</string>
    <string name="view_text_car">Авто</string>
    <string name="view_text_cancel_ride">Отменить поездку</string>
    <string name="view_text_gender">Пол</string>
    <string name="view_text_age">Возраст</string>
    <string name="view_text_about">Расскажите о себе:\n(Например: увлечения, работа, прочее)</string>
    <string name="view_text_about_hidden">Написать…</string>
    <string name="view_text_show_feedback">Смотреть отзывы</string>
    <string name="view_text_write_message">Написать сообщение</string>
    <string name="view_text_send_winks">Подмигнуть</string>
    <string name="view_text_send_respect">Выразить уважение</string>
    <string name="view_text_show_profile">Смотреть профиль</string>
    <string name="view_text_send_invite">Предложить поездку</string>
    <string name="view_text_search_only"><b>Искать только:</b></string>
    <string name="view_text_search_man">Мужчин</string>
    <string name="view_text_search_woman"><b>Женщин</b></string>
    <string name="view_text_search_all"><b>Всех</b></string>
    <string name="view_text_winks_response">Подмигнуть в ответ</string>
    <string name="view_text_respect_response">Поблагодорить в ответ</string>

    <!-- Texts of messages -->
    <string name="message_text_empty_input_forms">Чтобы продолжить заполните поля</string>

    <!-- Titles of screens -->
    <string name="toolbar_title_additional_services">Дополнительные услуги</string>
    <string name="toolbar_title_trip_completion">Завершение поездки</string>
    <string name="toolbar_title_order">Заказ</string>
    <string name="toolbar_title_trip_order">Заказ</string>
    <string name="toolbar_title_trip_execution">Выполнение</string>
    <string name="toolbar_title_user_account">Страница пользователя</string>
    <string name="toolbar_title_invite_person">Предложение поездки</string>
    <string name="toolbar_title_respect">Вам выразили уважение</string>
    <string name="toolbar_title_winks">Вам подмигнули</string>
    <string name="toolbar_title_notification">Уведомление</string>

</resources>
