<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_create_order"
            android:title="@string/create_order" />
        <item
            android:id="@+id/nav_find_companion"
            android:title="@string/find_companion" />
        <item
            android:id="@+id/nav_current_ride"
            android:title="@string/current_ride" />
        <item
            android:id="@+id/nav_rides_history"
            android:title="@string/rides_history" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
