<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:padding="@dimen/margin_base">

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/view_text_search_only"
        android:textColor="@color/textColorPrimary"
        style="@style/AppTextAppearance.Headline.Inverse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_blue">

            <TextView
                android:id="@+id/man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/view_text_search_man"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_red">

            <TextView
                android:id="@+id/woman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/view_text_search_woman"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow">

            <TextView
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/view_text_search_all"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="1dp"
            android:background="#808080"
            android:layout_marginRight="10dp"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/info_about_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <TextView
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/info_about_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="1dp"
            android:background="#808080"
            android:layout_marginRight="10dp"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/info_about_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>