<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            style="@style/AppTheme.ProgressBar.Horizontal"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="-7dp"
            tools:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_double">

            <TextView
                style="@style/AppTextAppearance.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_double"
                android:text="@string/enter_account" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/margin_eighth">

                <TextView
                    style="@style/AppTextAppearance.Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <TextView
                    style="@style/AppTextAppearance.Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="*"
                    android:textColor="@android:color/holo_red_light" />

            </LinearLayout>

            <EditText
                style="@style/AppTheme.EditText.Rounded"
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="phone"
                android:drawableLeft="@drawable/ic_phone"
                android:text="380"
                tools:hint="Login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_base_plus_quarter"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/margin_eighth">

                <TextView
                    style="@style/AppTextAppearance.Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <TextView
                    style="@style/AppTextAppearance.Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="*"
                    android:textColor="@android:color/holo_red_light" />
            </LinearLayout>

            <EditText
                style="@style/AppTheme.EditText.Rounded"
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:drawableLeft="@drawable/ic_secure"
                tools:text="test"/>

            <Button
                style="@style/AppTheme.Button.PrimaryDark"
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_base_plus"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/margin_quarter"/>

            <Button
                style="@style/AppTheme.Button.PrimaryDark"
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_quarter_plus"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/margin_quarter"/>

            <TextView
                style="@style/AppTextAppearance.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/or_entire_within"
                android:layout_marginTop="@dimen/margin_quarter_plus"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_vk"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_circle_vk"
                    android:layout_margin="@dimen/margin_quarter"/>
                <ImageView
                    android:id="@+id/iv_fb"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_circle_fb"
                    android:layout_margin="@dimen/margin_quarter"/>
                <ImageView
                    android:id="@+id/iv_gplus"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_circle_gplus"
                    android:layout_margin="@dimen/margin_quarter"/>
                <ImageView
                    android:id="@+id/iv_twitter"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_circle_twitter"
                    android:layout_margin="@dimen/margin_quarter"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>